# api/src/main/java/no/freshify/api/service/HouseholdRecipeService.java
@@ -3,21 +3,32 @@ package no.freshify.api.service;
 import lombok.RequiredArgsConstructor;
 import no.freshify.api.exception.HouseholdNotFoundException;
 import no.freshify.api.exception.HouseholdRecipeNotFoundException;
+import no.freshify.api.exception.RecipeNotFoundException;
+import no.freshify.api.model.Household;
+import no.freshify.api.model.Item;
+import no.freshify.api.model.ItemStatus;
+import no.freshify.api.model.ItemType;
 import no.freshify.api.model.recipe.HouseholdRecipe;
+import no.freshify.api.model.recipe.Recipe;
+import no.freshify.api.model.recipe.RecipeIngredient;
 import no.freshify.api.repository.*;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
+import java.util.*;
 
 @Service
 @RequiredArgsConstructor
 public class HouseholdRecipeService {
+
+    private final ItemService itemService;
     private final HouseholdRecipeRepository householdRecipeRepository;
+    private final HouseholdRepository householdRepository;
+    private final ItemRepository itemRepository;
 
     private final Logger logger = LoggerFactory.getLogger(HouseholdService.class);
-    private final HouseholdRepository householdRepository;
+    private final RecipeRepository recipeRepository;
 
     public HouseholdRecipe addRecipe(HouseholdRecipe householdRecipe) {
         return householdRecipeRepository.save(householdRecipe);
@@ -45,5 +56,19 @@ public class HouseholdRecipeService {
         }
 
         householdRecipeRepository.delete(householdRecipe);
+    }
+
+    public List<RecipeIngredient> getMissingIngredients(Household household, Recipe recipe) {
+        List<RecipeIngredient> missingIngredients = new ArrayList<>();
+
+        List<Item> inventoryItems = itemRepository.findItemsByHouseholdAndStatus(household, ItemStatus.INVENTORY);
+        Set<ItemType> uniqueInventoryItemTypes = itemService.getUniqueItemTypes(inventoryItems);
+
+        for (RecipeIngredient recipeIngredient : recipe.getRecipeIngredients()) {
+            if (!uniqueInventoryItemTypes.contains(recipeIngredient.getItemType())) {
+                missingIngredients.add(recipeIngredient);
+            }
+        }
+        return missingIngredients;
     }
 }
