# docs/swagger.yaml
@@ -992,7 +992,7 @@ paths:
         - household recipe
       summary: Adds missing ingredients from the recipe to the shopping list
       description: Adds all the missing ingredients of the given recipe to the given household's shopping list.
-      operationId: addToShoppingList
+      operationId: addRecipeToShoppingList
       parameters:
         - name: householdId
           in: path
@@ -1010,11 +1010,13 @@ paths:
             format: int64
       responses:
           "200":
-            description: Success - the recipe's missing ingredients was added to the household's shopping list
+            description: Success - the recipe's missing ingredients were added to the household's shopping list
             content:
               application/json:
                 schema:
-                  $ref: "#/components/schemas/HouseholdRecipeDTO"
+                  type: array
+                  items:
+                    $ref: "#/components/schemas/RecipeIngredientDTO"
           "404":
             description: The specified recipe or household was not found
   /householdrecipe/{householdId}/recipe:
@@ -1455,6 +1457,23 @@ components:
         name:
           type: string
           example: "Italian"
+    RecipeIngredientDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 1
+        itemType:
+          $ref: "#/components/schemas/ItemType"
+        amount:
+          type: number
+          example: 2.3
+        unit:
+          type: string
+          example: "dairy"
+        householdHasIngredient:
+          type: boolean
     RecipeDTOPage:
       type: object
       properties:
